# setuniversity-de

./: .gitignore  README.md
HW-1/: Dockerfile  README.md  docker-compose.yml
HW-1/config/: local_infile.cnf
HW-1/init/: 01_download_data.sh  02_load_raw_data.sql  03_create_table.sql  04_load_clean_data.sql
HW-10/: README.md  docker-compose.yml  show-results.sh  start-services.sh  stop-services.sh
HW-10/spark-streaming-cassandra-writer/: Dockerfile  README.md  pyproject.toml
HW-10/spark-streaming-cassandra-writer/src/spark_cassandra_writer/: __init__.py  writer.py
HW-10/spark-streaming-processor/: Dockerfile  README.md  pyproject.toml
HW-10/spark-streaming-processor/src/spark_processor/: __init__.py  processor.py
HW-10/stream-generator/: Dockerfile  README.md  pyproject.toml
HW-10/stream-generator/src/stream_generator/: __init__.py  generator.py
HW-2/: Dockerfile  docker-compose.yml
HW-2/analyze-ads/: README.md  pyproject.toml  requirements.txt
HW-2/analyze-ads/src/analyze_ads/: db.py  main.py
HW-2/analyze-ads/src/analyze_ads/queries/: advertiser_summary.sql  campaign_summary.sql  device_summary.sql  location_summary.sql  user_activity_summary.sql
HW-2/analyze-ads/src/analyze_ads/scripts/: utils.py
HW-2/db/: create-backup.sh
HW-2/init/: init-db.sh
HW-3/analyze-ads-nosql/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
HW-3/analyze-ads-nosql/src/analyze_ads_nosql/: main.py  utils.py
HW-3/analyze-ads-nosql/src/analyze_ads_nosql/import_data/: import_sessions.py  import_users.py
HW-3/analyze-ads-nosql/src/analyze_ads_nosql/mongo_queries/: README.md  ad_fatigue.py  ad_interactions.py  clicks_per_hour.py  last_sessions.py  top_categories.py
HW-4/analyze-ads-cassandra/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
HW-4/analyze-ads-cassandra/src/analyze_ads_cassandra/: utils.py
HW-4/analyze-ads-cassandra/src/analyze_ads_cassandra/cassandra_queries/: README.md  ddl_queries.cql  dml_queries.cql
HW-4/analyze-ads-cassandra/src/analyze_ads_cassandra/etl_scripts/: load_analytics_active_users.py  load_analytics_advertiser_spend.py  load_analytics_advertiser_spend_by_region.py  load_analytics_campaign_daily_metrics.py  load_analytics_user_engagement.py
HW-4/analyze-ads-cassandra/src/analyze_ads_cassandra/import_data/: load_raw.py  migrate_denormalized.py
HW-5/analyze-ads-rest-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
HW-5/analyze-ads-rest-api/src/analyze_ads_rest_api/: app.py  benchmark.py  cache.py  schemas.py
HW-5/analyze-ads-rest-api/src/analyze_ads_rest_api/models/: advertiser.py  campaign.py  click.py  event.py  user.py
HW-5/analyze-ads-rest-api/src/analyze_ads_rest_api/queries/: advertiser_summary.sql  campaign_summary.sql  user_activity_summary.sql
HW-5/analyze-ads-rest-api/src/analyze_ads_rest_api/resources/: __init__.py  advertiser_spending.py  blueprints.py  campaign_performance.py  user_engagement.py
HW-8/kafka-producer/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  restart-kafka.sh
HW-8/kafka-producer/src/kafka_producer/: producer.py  utils.py
HW-9/kafka-consumer/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  restart-kafka.sh
HW-9/kafka-consumer/src/kafka_consumer/: consumer.py  utils.py
