[project]
name = "analyze-ads"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Lozhevych",email = "m.lozhevych@setuniversity.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]

[tool.poetry]
name = "analyze-ads"
packages = [{include = "analyze_ads", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze-ads = "analyze_ads.main:main"