[project]
name = "analyze-ads-nosql"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Lozhevych",email = "m.lozhevych@setuniversity.edu.ua"}
]
#readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymongo (>=4.13.2,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "analyze_ads_nosql", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
import_users = "analyze_ads_nosql.import_data.import_users:main"
import_sessions = "analyze_ads_nosql.import_data.import_sessions:main"
main = "analyze_ads_nosql.main:main"