[project]
name = "analyze-ads-cassandra"
version = "0.1.0"
description = ""
authors = [
    { name = "Mykyta Lozhevych", email = "m.lozhevych@setuniversity.edu.ua" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rich (>=14.0.0,<15.0.0)",
    "cassandra-driver (>=3.25.0,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "analyze_ads_cassandra", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
import_data = "analyze_ads_cassandra.import_data.load_raw:main"
migrate_data = "analyze_ads_cassandra.import_data.migrate_denormalized:main"
load_analytics_campaign_daily_metrics = "analyze_ads_cassandra.etl_scripts.load_analytics_campaign_daily_metrics:main"
load_analytics_advertiser_spend = "analyze_ads_cassandra.etl_scripts.load_analytics_advertiser_spend:main"
load_analytics_user_engagement = "analyze_ads_cassandra.etl_scripts.load_analytics_user_engagement:main"
load_analytics_active_users = "analyze_ads_cassandra.etl_scripts.load_analytics_active_users:main"
load_analytics_advertiser_spend_by_region = "analyze_ads_cassandra.etl_scripts.load_analytics_advertiser_spend_by_region:main"