[project]
name = "kafka-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Lozhevych",email = "m.lozhevych@setuniversity.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "kafka_consumer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runconsumer = "kafka_consumer.consumer:main"
